apps/production/monitoring/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: prometheus-server
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik
